src/meta.css
/* ==========================================================================
   Variables
   ========================================================================== */

/* ==========================================================================
   Base
   ========================================================================== */

.ts-meta {
    display: inline-flex;
    position: relative;
    flex-wrap: wrap;
}

/* ==========================================================================
   Structure
   ========================================================================== */

.ts-meta .item {
    color: inherit;
    text-decoration: none;
}

.ts-meta .item:not(:last-child)::after {
    margin: 0 0.25rem;
    content: "·";
    color: var(--ts-gray-500);
    text-decoration: none;
    pointer-events: none;
    user-select: none;
    display: inline-block;
}

.ts-meta a.item:hover {
    text-decoration: underline;
}

/* ==========================================================================
   Variations
   ========================================================================== */

/**
 * Aligns
 */

.ts-meta:is(.is-start-aligned, .is-center-aligned, .is-end-aligned) {
    display: flex;
}

.ts-meta.is-start-aligned {
    justify-content: flex-start;
}

.ts-meta.is-center-aligned {
    justify-content: center;
}

.ts-meta.is-end-aligned {
    justify-content: flex-end;
}

/**
 * Secondary
 */

.ts-meta.is-secondary .item {
    color: var(--ts-gray-600);
}

/**
 * Sizes
 */

.ts-meta.is-small {
    font-size: var(--ts-font-size-14px);
}

.ts-meta.is-large {
    font-size: var(--ts-font-size-17px);
}

